--- a/src/app/stuvation/stuvation.component.html
+++ b/src/app/stuvation/stuvation.component.html
@@ -165,6 +165,8 @@
 
               <div>
                 <img class="profilepicture" [src]="image_path + stuvation.profile_image" alt="Card image cap">
+                <img class="profilepicture" *ngIf="stuvation.profile_image==''" src="../assets/images/user-dummy.png"
+                  alt="Profile Pic">
               </div>
               <div>
                 <b> <a [routerLink]="['/myprofile',stuvation.user_id]"
