--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -7,11 +7,14 @@
   <div class="row">
     <div class="col-sm-2" style="text-align: center">
       <div>
-        <img class="profilepicture" style="height: 111px;width:111px;border-radius:55%" [src]="strImage"
-          alt="Profile image">
+        <img class="profilepicture" *ngIf="strImage!=undefined" style="height: 111px;width:111px;border-radius:55%"
+          [src]="strImage" alt="Profile image">
 
+        <img class="profilepicture" style="border-radius: 10em;" *ngIf="strImage==undefined"
+          src="../assets/images/user-dummy.png" alt="Profile Pic">
 
         <input *ngIf="showEdit" class="form-control" type="file" accept="image1/*" (change)="readUrl($event,'image')">
+
 
         <!-- <img [src]="strImage" alt="" width="100" height="100"
                 style="max-width: 100px; max-height: 100px;"> -->
