--- a/src/app/tech-bank/tech-bank.component.html
+++ b/src/app/tech-bank/tech-bank.component.html
@@ -109,7 +109,7 @@
               <span class="cardSubHeading crd-hdng">Registration Details</span>
 
               <div><b class="crd-lft">Number of People Applied</b> <span class="crd-ryt">:
-                  {{techteach.seat_capacity}}</span>
+                  {{techteach.no_of_users_applied}}</span>
               </div>
 
               <ul class="nav nav-pills crd-btn-dv">
@@ -181,7 +181,7 @@
               <span class="cardSubHeading crd-hdng">Registration Details</span>
 
               <div><b class="crd-lft">Number of People Applied</b> <span class="crd-ryt">:
-                  {{techtalkdata.seat_capacity}}</span>
+                  {{techtalkdata.no_of_users_applied}}</span>
               </div>
               <ul class="nav nav-pills crd-btn-dv">
                 <li class="nav-item">
