--- a/src/app/tech-bank/tech-bank.component.css
+++ b/src/app/tech-bank/tech-bank.component.css
@@ -51,7 +51,7 @@
     color: white !important;
     height: 42px;
     padding: 0 20px;
-    font-size: 15px;
+    font-weight: bold;
         margin-top: 5px;
         border-radius: 33px;
         color: #ffff;
